# vps-guard

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  vpsguard.example.toml
.beads/: issues.jsonl
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md
docs/code-review/: 2026-01-09-production-readiness-review.md
docs/plans/: 2024-12-30-vpsguard-design.md  2025-01-05-geoip-integration.md  2025-01-05-watch-command-implementation.md  2026-01-05-oss-modernization.md  2026-01-05-user-testing-plan.md  remaining-features.md  vpsguard-project-plan.md
src/vpsguard/: __init__.py  cli.py  config.py  daemon.py  history.py  watch.py
src/vpsguard/generators/: __init__.py  profiles.py  synthetic.py
src/vpsguard/geo/: __init__.py  database.py  reader.py  velocity.py
src/vpsguard/ml/: __init__.py  baseline.py  detector.py  engine.py  explain.py  features.py
src/vpsguard/models/: events.py
src/vpsguard/parsers/: __init__.py  auth.py  base.py  journald.py  nginx.py  secure.py  syslog.py
src/vpsguard/reporters/: __init__.py  base.py  html.py  json.py  markdown.py  terminal.py
src/vpsguard/rules/: __init__.py  base.py  breach.py  brute_force.py  engine.py  geo_velocity.py  invalid_user.py  (+3 more)
tests/: benchmark.py  test_analyze.py  test_cli.py  test_daemon.py  test_generators.py  test_geoip.py  test_history.py  test_ml.py  test_models.py  test_nginx_parser.py  test_parsers.py  test_reporters.py  test_rules.py  test_syslog_parser.py  test_watch.py  test_watch_config.py
